--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "styled-components": "^5.2.0"
   },
   "scripts": {
-    "start": "(set PORT=3006 || export PORT=3006) && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "(set PORT=3006 || export PORT=3006) && react-app-rewired start",
+    "build": "react-app-rewired  build",
+    "test": "react-app-rewired  test",
+    "eject": "react-app-rewired  eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.1.6"
   }
 }
